--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ body {
   cursor: pointer;
   transition: all 0.5s;
   outline: none;
-
 }
 
 .next__icon {
@@ -133,4 +132,25 @@ body {
   font-size: 1.5rem;
   font-weight: 500;
   align-self: flex-end;
+}
+
+/* media query  */
+@media only screen and (min-width: 1024px) {
+  .container {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 4rem;
+  }
+
+  .intro {
+    grid-column: 1/3;
+  }
+
+  .buttons-wrapper {
+    grid-column: 3/ -1;
+  }
+  .quote-box {
+    grid-column: 3/ -1;
+  }
 }
